Fix alignment on small screens

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -92,6 +92,11 @@ html[data-theme='dark'] {
 
 /* https://theochu.com/docusaurus/styling/ */
 
+@media screen and (max-width: 500px) {
+  #mc_embed_signup.container  {
+    width: auto;
+  }
+}
 #mc_embed_signup .mc-field-group {
   float: left;
   display: block;
